decaf_PA3/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | OCStmt ';'
  37       | GuardedStmt
  38       | ForeachStmt
  39       | StmtBlock

  40  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  41  GuardedStmt : IF '{' GuardList Guard '}'
  42              | IF '{' '}'

  43  GuardList : GuardList Guard SEP
  44            |

  45  Guard : Expr ':' Stmt

  46  SimpleStmt : LValue '=' Expr
  47             | Call
  48             |

  49  Receiver : Expr '.'
  50           |

  51  LValue : Receiver IDENTIFIER
  52         | Expr '[' Expr ']'
  53         | AutoVariable

  54  AutoVariable : VAR IDENTIFIER

  55  Call : Receiver IDENTIFIER '(' Actuals ')'

  56  Expr : LValue
  57       | Call
  58       | Constant
  59       | Expr '+' Expr
  60       | Expr '-' Expr
  61       | Expr '*' Expr
  62       | Expr '/' Expr
  63       | Expr '%' Expr
  64       | Expr EQUAL Expr
  65       | Expr NOT_EQUAL Expr
  66       | Expr '<' Expr
  67       | Expr '>' Expr
  68       | Expr INIT Expr
  69       | Expr '[' Expr ']' DEFAULT Expr
  70       | Expr LESS_EQUAL Expr
  71       | Expr GREATER_EQUAL Expr
  72       | Expr AND Expr
  73       | Expr OR Expr
  74       | '(' Expr ')'
  75       | '-' Expr
  76       | '!' Expr
  77       | READ_INTEGER '(' ')'
  78       | READ_LINE '(' ')'
  79       | THIS
  80       | NEW IDENTIFIER '(' ')'
  81       | NEW Type '[' Expr ']'
  82       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  83       | '(' CLASS IDENTIFIER ')' Expr

  84  Constant : LITERAL
  85           | NULL

  86  Actuals : ExprList
  87          |

  88  ExprList : ExprList ',' Expr
  89           | Expr

  90  WhileStmt : WHILE '(' Expr ')' Stmt

  91  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  92  ForeachStmt : FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt
  93              | FOREACH '(' BoundVariable IN Expr ')' Stmt

  94  BoundVariable : Variable
  95                | AutoVariable

  96  BreakStmt : BREAK

  97  IfStmt : IF '(' Expr ')' Stmt ElseClause

  98  ElseClause : ELSE Stmt
  99             |

 100  ReturnStmt : RETURN Expr
 101             | RETURN

 102  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (48)
	Receiver : .  (50)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'{'  shift 48
	'}'  shift 69
	SCOPY  shift 70
	VAR  shift 71
	FOREACH  shift 72
	IDENTIFIER  reduce 50
	';'  reduce 48

	VariableDef  goto 73
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	WhileStmt  goto 78
	ForStmt  goto 79
	ReturnStmt  goto 80
	PrintStmt  goto 81
	BreakStmt  goto 82
	OCStmt  goto 83
	GuardedStmt  goto 84
	ForeachStmt  goto 85
	Expr  goto 86
	LValue  goto 87
	Call  goto 88
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 53
	Constant : NULL .  (85)

	.  reduce 85


state 54
	Expr : THIS .  (79)

	.  reduce 79


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (90)

	'('  shift 92
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (91)

	'('  shift 93
	.  error


state 57
	GuardedStmt : IF . '{' GuardList Guard '}'  (41)
	GuardedStmt : IF . '{' '}'  (42)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (97)

	'('  shift 94
	'{'  shift 95
	.  error


state 58
	ReturnStmt : RETURN . Expr  (100)
	ReturnStmt : RETURN .  (101)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50
	';'  reduce 101

	Expr  goto 96
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 59
	BreakStmt : BREAK .  (96)

	.  reduce 96


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (80)
	Expr : NEW . Type '[' Expr ']'  (81)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 99
	.  error

	Type  goto 100


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (102)

	'('  shift 101
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (77)

	'('  shift 102
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (78)

	'('  shift 103
	.  error


state 64
	Constant : LITERAL .  (84)

	.  reduce 84


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (82)

	'('  shift 104
	.  error


state 66
	Expr : '-' . Expr  (75)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50

	Expr  goto 105
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 67
	Expr : '!' . Expr  (76)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50

	Expr  goto 106
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 68
	Expr : '(' . Expr ')'  (74)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (83)
	Receiver : .  (50)

	CLASS  shift 107
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50

	Expr  goto 108
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 69
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 70
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (40)

	'('  shift 109
	.  error


state 71
	AutoVariable : VAR . IDENTIFIER  (54)

	IDENTIFIER  shift 110
	.  error


state 72
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr WHILE Expr ')' Stmt  (92)
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr ')' Stmt  (93)

	'('  shift 111
	.  error


state 73
	Stmt : VariableDef .  (28)

	.  reduce 28


state 74
	Stmt : StmtBlock .  (39)

	.  reduce 39


state 75
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 76
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 112
	.  error


state 77
	Stmt : IfStmt .  (30)

	.  reduce 30


state 78
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 79
	Stmt : ForStmt .  (32)

	.  reduce 32


state 80
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 113
	.  error


state 81
	Stmt : PrintStmt . ';'  (34)

	';'  shift 114
	.  error


state 82
	Stmt : BreakStmt . ';'  (35)

	';'  shift 115
	.  error


state 83
	Stmt : OCStmt . ';'  (36)

	';'  shift 116
	.  error


state 84
	Stmt : GuardedStmt .  (37)

	.  reduce 37


state 85
	Stmt : ForeachStmt .  (38)

	.  reduce 38


state 86
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . INIT Expr  (68)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (69)
	Expr : Expr . LESS_EQUAL Expr  (70)
	Expr : Expr . GREATER_EQUAL Expr  (71)
	Expr : Expr . AND Expr  (72)
	Expr : Expr . OR Expr  (73)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
	EQUAL  shift 121
	NOT_EQUAL  shift 122
	'+'  shift 123
	'-'  shift 124
	'*'  shift 125
	'/'  shift 126
	'%'  shift 127
	'>'  shift 128
	'<'  shift 129
	'.'  shift 130
	'['  shift 131
	INIT  shift 132
	.  error


state 87
	SimpleStmt : LValue . '=' Expr  (46)
	Expr : LValue .  (56)

	'='  shift 133
	AND  reduce 56
	OR  reduce 56
	LESS_EQUAL  reduce 56
	GREATER_EQUAL  reduce 56
	EQUAL  reduce 56
	NOT_EQUAL  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'%'  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	'.'  reduce 56
	'['  reduce 56
	INIT  reduce 56


state 88
	SimpleStmt : Call .  (47)
	Expr : Call .  (57)

	AND  reduce 57
	OR  reduce 57
	LESS_EQUAL  reduce 57
	GREATER_EQUAL  reduce 57
	EQUAL  reduce 57
	NOT_EQUAL  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	'.'  reduce 57
	';'  reduce 47
	')'  reduce 47
	'['  reduce 57
	INIT  reduce 57


state 89
	LValue : Receiver . IDENTIFIER  (51)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (55)

	IDENTIFIER  shift 134
	.  error


state 90
	LValue : AutoVariable .  (53)

	.  reduce 53


state 91
	Expr : Constant .  (58)

	.  reduce 58


state 92
	WhileStmt : WHILE '(' . Expr ')' Stmt  (90)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50

	Expr  goto 135
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 93
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (91)
	SimpleStmt : .  (48)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50
	';'  reduce 48

	SimpleStmt  goto 136
	Expr  goto 86
	LValue  goto 87
	Call  goto 88
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 94
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (97)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50

	Expr  goto 137
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 95
	GuardedStmt : IF '{' . GuardList Guard '}'  (41)
	GuardedStmt : IF '{' . '}'  (42)
	GuardList : .  (44)

	'}'  shift 138
	NULL  reduce 44
	THIS  reduce 44
	NEW  reduce 44
	READ_INTEGER  reduce 44
	READ_LINE  reduce 44
	LITERAL  reduce 44
	IDENTIFIER  reduce 44
	INSTANCEOF  reduce 44
	'-'  reduce 44
	'!'  reduce 44
	'('  reduce 44
	VAR  reduce 44

	GuardList  goto 139


state 96
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . INIT Expr  (68)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (69)
	Expr : Expr . LESS_EQUAL Expr  (70)
	Expr : Expr . GREATER_EQUAL Expr  (71)
	Expr : Expr . AND Expr  (72)
	Expr : Expr . OR Expr  (73)
	ReturnStmt : RETURN Expr .  (100)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
	EQUAL  shift 121
	NOT_EQUAL  shift 122
	'+'  shift 123
	'-'  shift 124
	'*'  shift 125
	'/'  shift 126
	'%'  shift 127
	'>'  shift 128
	'<'  shift 129
	'.'  shift 130
	'['  shift 131
	INIT  shift 132
	';'  reduce 100


state 97
	Expr : LValue .  (56)

	.  reduce 56


state 98
	Expr : Call .  (57)

	.  reduce 57


state 99
	Expr : NEW IDENTIFIER . '(' ')'  (80)

	'('  shift 140
	.  error


state 100
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (81)

	'['  shift 141
	.  error


state 101
	PrintStmt : PRINT '(' . ExprList ')'  (102)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50

	Expr  goto 142
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91
	ExprList  goto 143


state 102
	Expr : READ_INTEGER '(' . ')'  (77)

	')'  shift 144
	.  error


state 103
	Expr : READ_LINE '(' . ')'  (78)

	')'  shift 145
	.  error


state 104
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (82)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	VAR  shift 71
	IDENTIFIER  reduce 50

	Expr  goto 146
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	AutoVariable  goto 90
	Constant  goto 91


state 105
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . INIT Expr  (68)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (69)
	Expr : Expr . LESS_EQUAL Expr  (70)
	Expr : Expr . GREATER_EQUAL Expr  (71)
	Expr : Expr . AND Expr  (72)
	Expr : Expr . OR Expr  (73)
	Expr : '-' Expr .  (75)

	'.'  shift 130
	'['  shift 131
	WHILE  reduce 75
	AND  reduce 75
	OR  reduce 75
	LESS_EQUAL  reduce 75
	GREATER_EQUAL  reduce 75
	EQUAL  reduce 75
	NOT_EQUAL  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	'>'  reduce 75
	'<'  reduce 75
	','  reduce 75
	';'  reduce 75
	')'  reduce 75
	']'  reduce 75
	INIT  reduce 75
	':'  reduce 75


state 106
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . INIT Expr  (68)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (69)
	Expr : Expr . LESS_EQUAL Expr  (70)
	Expr : Expr . GREATER_EQUAL Expr  (71)
	Expr : Expr . AND Expr  (72)
	Expr : Expr . OR Expr  (73)
	Expr : '!' Expr .  (76)

	'.'  shift 130
	'['  shift 131
	WHILE  reduce 76
	AND  reduce 76
	OR  reduce 76
	LESS_EQUAL  reduce 76
	GREATER_EQUAL  reduce 76
	EQUAL  reduce 76
	NOT_EQUAL  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'>'  reduce 76
	'<'  reduce 76
	','  reduce 76
	';'  reduce 76
	')'  reduce 76
	']'  reduce 76
	INIT  reduce 76
	':'  reduce 76


state 107
	Expr : '(' CLASS . IDENTIFIER ')' Expr  (83)

	IDENTIFIER  shift 147
	.  error


state 108
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . INIT Expr  (68)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (69)
	Expr : Expr . LESS_EQUAL Expr  (70)
	Expr : Expr . GREATER_EQUAL Expr  (71)
	Expr : Expr . AND Expr  (72)
	Expr : Expr . OR Expr  (73)
	Expr : '(' Expr . ')'  (74)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
	EQUAL  shift 121
	NOT_EQUAL  shift 122
	'+'  shift 123
	'-'  shift 124
	'*'  shift 125
	'/'  shift 126
	'%'  shift 127
	'>'  shift 128
	'<'  shift 129
	'.'  shift 130
	')'  shift 148
	'['  shift 131
	INIT  shift 132
	.  error


state 109
	OCStmt : SCOPY '(' . IDENTIFIER ',' Expr ')'  (40)

	IDENTIFIER  shift 149
	.  error


state 110
	AutoVariable : VAR IDENTIFIER .  (54)

	.  reduce 54


state 111
	ForeachStmt : FOREACH '(' . BoundVariable IN Expr WHILE Expr ')' Stmt  (92)
	ForeachStmt : FOREACH '(' . BoundVariable IN Expr ')' Stmt  (93)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	VAR  shift 71
	.  error

	Variable  goto 150
	Type  goto 40
	AutoVariable  goto 151
	BoundVariable  goto 152


state 112
	Stmt : SimpleStmt ';' .  (29)

	.  reduce 29


state 113
	Stmt : ReturnStmt ';' .  (33)

	.  reduce 33


state 114
	Stmt : PrintStmt ';' .  (34)

	.  reduce 34

